// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Validate Azure deployment readiness. USE FOR: check if app is ready to deploy, validate azure.yaml or Bicep configuration, run preflight checks, test deployment preview, what-if analysis, verify infrastructure configuration, troubleshoot deployment errors. DO NOT USE FOR: creating new apps (use azure-prepare), deploying (use azure-deploy).",
  "extractedKeywords": [
    "analysis",
    "apps",
    "azure",
    "azure-deploy",
    "azure-prepare",
    "bicep",
    "check",
    "checks",
    "cli",
    "configuration",
    "creating",
    "deploy",
    "deploying",
    "deployment",
    "errors",
    "infrastructure",
    "preflight",
    "preview",
    "readiness",
    "ready",
    "terraform",
    "test",
    "troubleshoot",
    "validate",
    "verify",
    "what-if",
    "yaml",
  ],
  "name": "azure-validate",
}
`;

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "analysis",
  "apps",
  "azure",
  "azure-deploy",
  "azure-prepare",
  "bicep",
  "check",
  "checks",
  "cli",
  "configuration",
  "creating",
  "deploy",
  "deploying",
  "deployment",
  "errors",
  "infrastructure",
  "preflight",
  "preview",
  "readiness",
  "ready",
  "terraform",
  "test",
  "troubleshoot",
  "validate",
  "verify",
  "what-if",
  "yaml",
]
`;
